--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,17 +1,49 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
+  <ion-toolbar color="dark">
     <ion-title>
-      Tab 3
+      Sobre
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 3</ion-title>
-    </ion-toolbar>
-  </ion-header>
 
-  <app-explore-container name="Tab 3 page"></app-explore-container>
+  <ion-item lines="full">
+
+    <ion-avatar slot="start">
+      <img src="assets/euuu.PNG">
+    </ion-avatar>
+
+    <ion-label>
+      <div>
+        <h2>Luiz Felipe Santana</h2>
+        <p>Aluno Etec "Cidade do Livro"</p>
+        <p>Lençóis Paulista - SP</p>
+        <p> (14) 9 9801-6126</p>
+        <p>
+          <a href="mailto:luiz.santos811@etec.sp.gov.br">luiz.santos811@etec.sp.gov.br</a>
+        </p>
+      </div>
+    </ion-label>
+  </ion-item>
+
+<div class="ion-text-center">
+  <img src="https://assets.pokemon.com/static2/br/img/icons/tcgo_logo.png">
+</div>
+
+<ion-item lines="full">
+  <ion-label>Versão </ion-label>
+  <ion-badge color="tertiary">0.1</ion-badge>
+</ion-item>
+
+<ion-item lines="full">
+  <ion-label>Ano</ion-label>
+  <ion-badge color="tertiary">2021</ion-badge>
+</ion-item>
+
+<ion-item lines="full">
+  <ion-label>Turma</ion-label>
+  <ion-badge color="tertiary">B</ion-badge>
+</ion-item>
+
 </ion-content>
