--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,17 +1,167 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
+<ion-header>
+  <ion-toolbar color="dark">
     <ion-title>
-      Tab 1
+      Pokedex
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 1</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  
+  <ion-searchbar placeholder="Filter Schedules"></ion-searchbar>
 
-  <app-explore-container name="Tab 1 page"></app-explore-container>
+  <ion-list>
+    <ion-item lines="full" class="ion-no-padding">
+      <ion-thumbnail>
+        <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/001.png">
+      </ion-thumbnail>
+      <ion-label>
+        <div>
+          <h3>Bulbasaur</h3>
+          <ion-badge color="grass">Grass</ion-badge>
+          <ion-badge color="poison">Poison</ion-badge>
+        </div>
+        </ion-label>
+        <ion-chip color="grass">
+          <ion-label>Nº 001</ion-label>
+        </ion-chip>
+    </ion-item>
+
+    <ion-item lines="full" class="ion-no-padding">
+      <ion-thumbnail>
+        <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/004.png">
+      </ion-thumbnail>
+      <ion-label>
+        <div>
+          <h3>Charmander</h3>
+          <ion-badge color="fire">Fire</ion-badge>
+        </div>
+        </ion-label>
+        <ion-chip color="fire">
+          <ion-label>Nº 004</ion-label>
+        </ion-chip>
+    </ion-item>
+
+    <ion-item lines="full" class="ion-no-padding">
+      <ion-thumbnail>
+        <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/007.png">
+      </ion-thumbnail>
+      <ion-label>
+        <div>
+          <h3>Squirtle</h3>
+          <ion-badge color="water">Water</ion-badge>
+        </div>
+        </ion-label>
+        <ion-chip color="water">
+          <ion-label>Nº 007</ion-label>
+        </ion-chip>
+    </ion-item>
+
+    <ion-item lines="full" class="ion-no-padding">
+      <ion-thumbnail>
+        <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/025.png">
+      </ion-thumbnail>
+      <ion-label>
+        <div>
+          <h3>Pikachu</h3>
+          <ion-badge color="eletric">Eletric</ion-badge>
+        </div>
+        </ion-label>
+        <ion-chip color="eletric">
+          <ion-label>Nº 025</ion-label>
+        </ion-chip>
+    </ion-item>
+  
+    <ion-item lines="full" class="ion-no-padding">
+      <ion-thumbnail>
+        <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/810.png">
+      </ion-thumbnail>
+      <ion-label>
+        <div>
+          <h3>Grookey</h3>
+          <ion-badge color="grass">Grass</ion-badge>
+        </div>
+        </ion-label>
+        <ion-chip color="grass">
+          <ion-label>Nº 810</ion-label>
+        </ion-chip>
+    </ion-item>
+
+    <ion-item lines="full" class="ion-no-padding">
+      <ion-thumbnail>
+        <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/813.png">
+      </ion-thumbnail>
+      <ion-label>
+        <div>
+          <h3>Scorbunny</h3>
+          <ion-badge color="fire">Fire</ion-badge>
+        </div>
+        </ion-label>
+        <ion-chip color="fire">
+          <ion-label>Nº 813</ion-label>
+        </ion-chip>
+    </ion-item>
+
+    <ion-item lines="full" class="ion-no-padding">
+      <ion-thumbnail>
+        <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/816.png">
+      </ion-thumbnail>
+      <ion-label>
+        <div>
+          <h3>Sobble</h3>
+          <ion-badge color="water">Water</ion-badge>
+        </div>
+        </ion-label>
+        <ion-chip color="water">
+          <ion-label>Nº 816</ion-label>
+        </ion-chip>
+    </ion-item>
+
+    <ion-item lines="full" class="ion-no-padding">
+      <ion-thumbnail>
+        <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/896.png">
+      </ion-thumbnail>
+      <ion-label>
+        <div>
+          <h3>Glastrier</h3>
+          <ion-badge color="ice">Ice</ion-badge>
+        </div>
+        </ion-label>
+        <ion-chip color="ice">
+          <ion-label>Nº 896</ion-label>
+        </ion-chip>
+    </ion-item>
+
+    <ion-item lines="full" class="ion-no-padding">
+      <ion-thumbnail>
+        <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/897.png">
+      </ion-thumbnail>
+      <ion-label>
+        <div>
+          <h3>Spectrier</h3>
+          <ion-badge color="ghost">Ghost</ion-badge>
+        </div>
+        </ion-label>
+        <ion-chip color="ghost">
+          <ion-label>Nº 897</ion-label>
+        </ion-chip>
+    </ion-item>
+
+    <ion-item lines="full" class="ion-no-padding">
+      <ion-thumbnail>
+        <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/534.png">
+      </ion-thumbnail>
+      <ion-label>
+        <div>
+          <h3>Conkeldurr</h3>
+          <ion-badge color="fighting">Fighting</ion-badge>
+        </div>
+        </ion-label>
+        <ion-chip color="fighting">
+          <ion-label>Nº 534</ion-label>
+        </ion-chip>
+    </ion-item>
+  </ion-list>
+
+
 </ion-content>
